added database contexts

--- a/BenchmarkApp/Server/appsettings.Development.json
+++ b/BenchmarkApp/Server/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "DatabaseConnectionString": "",
+  "DatabaseName": "mongoDB",
+  "Neo4JConfig": {
+    "Url": "",
+    "User": "",
+    "Password": ""
   }
 }
