added connection config objects

--- a/BenchmarkApp/Server/appsettings.Development.json
+++ b/BenchmarkApp/Server/appsettings.Development.json
@@ -6,11 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "DatabaseConnectionString": "",
-  "DatabaseName": "mongoDB",
+  "MongoConfig": {
+    "DatabaseConnectionString": "",
+    "DatabaseName": "mongoDB"
+  },
   "Neo4JConfig": {
     "Url": "",
     "User": "",
     "Password": ""
+  },
+  "ConnectionStrings": {
+    "postgres": "Server=localhost;Port=25432;Database=postgres;Uid=postgres;Pwd=postgres;"
   }
 }
