--- a/BenchmarkApp/Server/BenchmarkApp.Server.csproj
+++ b/BenchmarkApp/Server/BenchmarkApp.Server.csproj
@@ -1,22 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.5" />
-    <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
-    <PackageReference Include="MongoDB.Driver.Core" Version="2.11.6" />
-    <PackageReference Include="Neo4j.Driver" Version="4.2.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.5" />
+        <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
+        <PackageReference Include="MongoDB.Driver.Core" Version="2.11.6" />
+        <PackageReference Include="Neo4j.Driver" Version="4.2.0" />
 
-  </ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Client\BenchmarkApp.Client.csproj" />
-    <ProjectReference Include="..\Shared\BenchmarkApp.Shared.csproj" />
-  </ItemGroup>
-
-
+    <ItemGroup>
+        <ProjectReference Include="..\Client\BenchmarkApp.Client.csproj" />
+        <ProjectReference Include="..\Shared\BenchmarkApp.Shared.csproj" />
+    </ItemGroup>
 </Project>
