added docker compose files for database services

--- a/BenchmarkApp/Server/appsettings.Development.json
+++ b/BenchmarkApp/Server/appsettings.Development.json
@@ -7,15 +7,15 @@
     }
   },
   "MongoConfig": {
-    "DatabaseConnectionString": "",
+    "DatabaseConnectionString": "mongodb://root:example@localhost:27017/?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
     "DatabaseName": "mongoDB"
   },
   "Neo4JConfig": {
-    "Url": "",
-    "User": "",
-    "Password": ""
+    "Url": "neo4j://0.0.0.0:7687",
+    "User": "neo4j",
+    "Password": "connect"
   },
   "ConnectionStrings": {
-    "postgres": "Server=localhost;Port=25432;Database=postgres;Uid=postgres;Pwd=postgres;"
+    "Postgres": "Server=localhost;Port=25433;Database=postgres;Uid=postgres;Pwd=postgres;"
   }
 }
