repositories are now connected to all docker databases

--- a/BenchmarkApp/Server/appsettings.Development.json
+++ b/BenchmarkApp/Server/appsettings.Development.json
@@ -11,7 +11,7 @@
     "DatabaseName": "mongoDB"
   },
   "Neo4JConfig": {
-    "Url": "neo4j://0.0.0.0:7687",
+    "Url": "bolt://localhost:7687",
     "User": "neo4j",
     "Password": "connect"
   },
