--- a/BenchmarkApp/Server/Database/Neo4J/docker-compose.yaml
+++ b/BenchmarkApp/Server/Database/Neo4J/docker-compose.yaml
@@ -13,12 +13,4 @@ services:
       NEO4J_dbms_memory_heap_max__size: 8G
       NEO4J_dbms_connector_https_advertised__address: 7473
 
-#      dbms.default_listen_address=0.0.0.0:7687
-#      dbms.connector.bolt.address=0.0.0.0:7687
-      
-#      NEO4J_dbms_connector_http_advertised__address: 7474
-##      NEO4J_dbms_default__advertised__address: localhost
-#      NEO4J_dbms_connector_bolt_tls__level: OPTIONAL
-#
-#      NEO4J_dbms_connector_bolt_client__auth: NONE
-#      NEO4J_dbms_connector_https_client__auth: NONE
+#      database explorer under http://localhost:7474/browser/
