added addUsers Method for Neo4JRepository.cs

--- a/BenchmarkApp/Server/BenchmarkApp.Server.csproj
+++ b/BenchmarkApp/Server/BenchmarkApp.Server.csproj
@@ -22,4 +22,9 @@
         <ProjectReference Include="..\Client\BenchmarkApp.Client.csproj" />
         <ProjectReference Include="..\Shared\BenchmarkApp.Shared.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Database\Core" />
+      <Folder Include="Migrations" />
+    </ItemGroup>
 </Project>
