--- a/BenchmarkApp/Server/Database/SQL/docker-compose.yaml
+++ b/BenchmarkApp/Server/Database/SQL/docker-compose.yaml
@@ -8,6 +8,11 @@ services:
     ports:
       - 25433:5432
     volumes:
-    - "pgdata:/var/lib/postgresql/data"
+      - "pgdata:/var/lib/postgresql/data"
+      
+    # necessary for complex join queries, otherwise memory is limited to 64MB
+    # https://stackoverflow.com/questions/56751565/pq-could-not-resize-shared-memory-segment-no-space-left-on-device
+    shm_size: 1gb
+    
 volumes:
   pgdata:
