--- a/BenchmarkApp/Server/BenchmarkApp.Server.csproj
+++ b/BenchmarkApp/Server/BenchmarkApp.Server.csproj
@@ -8,13 +8,14 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.5" />
         <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
         <PackageReference Include="MongoDB.Driver.Core" Version="2.11.6" />
-        <PackageReference Include="Neo4j.Driver" Version="4.2.0" />
 
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Neo4j.Driver" Version="4.3.1" />
+        <PackageReference Include="Neo4j.Driver.Extensions" Version="1.0.10" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
     </ItemGroup>
 
