--- a/BenchmarkApp/Server/appsettings.Development.json
+++ b/BenchmarkApp/Server/appsettings.Development.json
@@ -12,6 +12,7 @@
   },
   "Neo4JConfig": {
     "Url": "bolt://localhost:7687",
+    "ClientUrl": "http://localhost:7474/",
     "User": "neo4j",
     "Password": "connect"
   },
