added table to frontend

--- a/BenchmarkApp/Server/appsettings.Development.json
+++ b/BenchmarkApp/Server/appsettings.Development.json
@@ -11,12 +11,11 @@
     "DatabaseName": "mongoDB"
   },
   "Neo4JConfig": {
-    "Url": "bolt://localhost:7687",
     "ClientUrl": "http://localhost:7474/",
     "User": "neo4j",
     "Password": "connect"
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=25433;Database=postgres;Uid=postgres;Pwd=postgres;"
+    "Postgres": "Server=host.docker.internal;Port=25433;Database=postgres;Uid=postgres;Pwd=postgres;"
   }
 }
