--- a/BenchmarkApp/Server/Database/Mongo/docker-compose.yaml
+++ b/BenchmarkApp/Server/Database/Mongo/docker-compose.yaml
@@ -14,3 +14,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      
+    mem_limit: 2048m
+    mem_reservation: 2048M
+    cpus: 2
