--- a/BenchmarkApp/Server/Database/Neo4J/docker-compose.yaml
+++ b/BenchmarkApp/Server/Database/Neo4J/docker-compose.yaml
@@ -13,4 +13,8 @@ services:
       NEO4J_dbms_memory_heap_max__size: 8G
       NEO4J_dbms_connector_https_advertised__address: 7473
 
-#      database explorer under http://localhost:7474/browser/
+    #      database explorer under http://localhost:7474/browser/
+
+    mem_limit: 2048m
+    mem_reservation: 2048M
+    cpus: 2
