--- a/BenchmarkApp/Server/Database/SQL/docker-compose.yaml
+++ b/BenchmarkApp/Server/Database/SQL/docker-compose.yaml
@@ -9,10 +9,14 @@ services:
       - 25433:5432
     volumes:
       - "pgdata:/var/lib/postgresql/data"
-      
+
+    mem_limit: 2048m
+    mem_reservation: 2048M
+    cpus: 2
     # necessary for complex join queries, otherwise memory is limited to 64MB
     # https://stackoverflow.com/questions/56751565/pq-could-not-resize-shared-memory-segment-no-space-left-on-device
-    shm_size: 1gb
-    
+    shm_size: 8gb
+
 volumes:
   pgdata:
+    
