--- a/BenchmarkApp/Server/Database/SQL/docker-compose.yaml
+++ b/BenchmarkApp/Server/Database/SQL/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     volumes:
       - "pgdata:/var/lib/postgresql/data"
 
-    mem_limit: 2048m
-    mem_reservation: 2048M
+    mem_limit: 8000m
+    mem_reservation: 8000m
     cpus: 2
     # necessary for complex join queries, otherwise memory is limited to 64MB
     # https://stackoverflow.com/questions/56751565/pq-could-not-resize-shared-memory-segment-no-space-left-on-device
