--- a/BenchmarkApp/Server/BenchmarkApp.Server.csproj
+++ b/BenchmarkApp/Server/BenchmarkApp.Server.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="33.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.5" />
         <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
         <PackageReference Include="MongoDB.Driver.Core" Version="2.11.6" />
